# ml-research-agent

./: .env.example  .gitignore  Makefile  README.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml
app/: streamlit_app.py
src/mlra/: __init__.py  config.py
src/mlra/agent/: coder.py  critic.py  executor.py  extractor.py  knowledge.py  literature.py  planner.py  reporter.py  verifier.py
tests/unit/: test_coder.py  test_config.py  test_critic.py  test_executor.py  test_extractor.py  test_knowledge.py  test_literature.py  test_planner.py  test_reporter.py  test_verifier.py
