[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mlra"
version = "0.1.0"
description = "ML Research Agent — autonomous agent that plans and runs ML experiments."
requires-python = ">=3.9"
dependencies = [
    # LLM client
    "groq>=0.11.0",
    # UI
    "streamlit>=1.36.0",
    # Config
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    # Sandbox executor (the agent's tools)
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "numpy>=1.24",
    "pandas>=2.0",
    # Plot verifier (multimodal VLM)
    "google-genai>=1.0",
    # arXiv RAG
    "arxiv>=2.0",
    # Knowledge graph
    "networkx>=3.0",
    "plotly>=5.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 110
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# Allow long lines inside docstrings / multi-line system prompts
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
